Fix issue with media alignment

--- a/globalCSS.css
+++ b/globalCSS.css
@@ -28,8 +28,7 @@ h6 * {
 }
 .square:before{
     content: "";
-    display: block;
-    padding-top: 100%;  /* initial ratio of 1:1*/
+    display: block;  /* initial ratio of 1:1*/
 }
 .aspectwrapper {
     display: inline-block;
